src/QDirtyParser.cpp

// Generated from /Users/subonan/subonan_THU/QDirty/src/grammar/QDirty.g4 by ANTLR 4.13.2


#include "QDirtyListener.h"
#include "QDirtyVisitor.h"

#include "QDirtyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct QDirtyParserStaticData final {
  QDirtyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  QDirtyParserStaticData(const QDirtyParserStaticData&) = delete;
  QDirtyParserStaticData(QDirtyParserStaticData&&) = delete;
  QDirtyParserStaticData& operator=(const QDirtyParserStaticData&) = delete;
  QDirtyParserStaticData& operator=(QDirtyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag qdirtyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<QDirtyParserStaticData> qdirtyParserStaticData = nullptr;

void qdirtyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (qdirtyParserStaticData != nullptr) {
    return;
  }
#else
  assert(qdirtyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<QDirtyParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "expr", "term", "factor"
    },
    std::vector<std::string>{
      "", "'let'", "'='", "';'", "'borrow'", "'['", "']'", "'('", "')'", 
      "'+'", "'-'", "'*'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "ADD", "SUB", "MUL", "ID", "NUMBER", 
      "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  qdirtyParserStaticData = std::move(staticData);
}

}

QDirtyParser::QDirtyParser(TokenStream *input) : QDirtyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

QDirtyParser::QDirtyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  QDirtyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *qdirtyParserStaticData->atn, qdirtyParserStaticData->decisionToDFA, qdirtyParserStaticData->sharedContextCache, options);
}

QDirtyParser::~QDirtyParser() {
  delete _interpreter;
}

const atn::ATN& QDirtyParser::getATN() const {
  return *qdirtyParserStaticData->atn;
}

std::string QDirtyParser::getGrammarFileName() const {
  return "QDirty.g4";
}

const std::vector<std::string>& QDirtyParser::getRuleNames() const {
  return qdirtyParserStaticData->ruleNames;
}

const dfa::Vocabulary& QDirtyParser::getVocabulary() const {
  return qdirtyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView QDirtyParser::getSerializedATN() const {
  return qdirtyParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

QDirtyParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QDirtyParser::StatementContext *> QDirtyParser::ProgramContext::statement() {
  return getRuleContexts<QDirtyParser::StatementContext>();
}

QDirtyParser::StatementContext* QDirtyParser::ProgramContext::statement(size_t i) {
  return getRuleContext<QDirtyParser::StatementContext>(i);
}


size_t QDirtyParser::ProgramContext::getRuleIndex() const {
  return QDirtyParser::RuleProgram;
}

void QDirtyParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void QDirtyParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any QDirtyParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<QDirtyVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

QDirtyParser::ProgramContext* QDirtyParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, QDirtyParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(11); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(10);
      statement();
      setState(13); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == QDirtyParser::T__0

    || _la == QDirtyParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

QDirtyParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QDirtyParser::StatementContext::ID() {
  return getToken(QDirtyParser::ID, 0);
}

QDirtyParser::ExprContext* QDirtyParser::StatementContext::expr() {
  return getRuleContext<QDirtyParser::ExprContext>(0);
}


size_t QDirtyParser::StatementContext::getRuleIndex() const {
  return QDirtyParser::RuleStatement;
}

void QDirtyParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void QDirtyParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any QDirtyParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<QDirtyVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

QDirtyParser::StatementContext* QDirtyParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, QDirtyParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(31);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(15);
      match(QDirtyParser::T__0);
      setState(16);
      match(QDirtyParser::ID);
      setState(17);
      match(QDirtyParser::T__1);
      setState(18);
      expr(0);
      setState(19);
      match(QDirtyParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(21);
      match(QDirtyParser::T__3);
      setState(22);
      match(QDirtyParser::ID);
      setState(23);
      match(QDirtyParser::T__2);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(24);
      match(QDirtyParser::T__3);
      setState(25);
      match(QDirtyParser::ID);
      setState(26);
      match(QDirtyParser::T__4);
      setState(27);
      expr(0);
      setState(28);
      match(QDirtyParser::T__5);
      setState(29);
      match(QDirtyParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

QDirtyParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QDirtyParser::ExprContext::SUB() {
  return getToken(QDirtyParser::SUB, 0);
}

QDirtyParser::TermContext* QDirtyParser::ExprContext::term() {
  return getRuleContext<QDirtyParser::TermContext>(0);
}

tree::TerminalNode* QDirtyParser::ExprContext::ADD() {
  return getToken(QDirtyParser::ADD, 0);
}

QDirtyParser::ExprContext* QDirtyParser::ExprContext::expr() {
  return getRuleContext<QDirtyParser::ExprContext>(0);
}


size_t QDirtyParser::ExprContext::getRuleIndex() const {
  return QDirtyParser::RuleExpr;
}

void QDirtyParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void QDirtyParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


std::any QDirtyParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<QDirtyVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


QDirtyParser::ExprContext* QDirtyParser::expr() {
   return expr(0);
}

QDirtyParser::ExprContext* QDirtyParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  QDirtyParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  QDirtyParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, QDirtyParser::RuleExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QDirtyParser::SUB: {
        setState(34);
        match(QDirtyParser::SUB);
        setState(35);
        term(0);
        break;
      }

      case QDirtyParser::ADD: {
        setState(36);
        match(QDirtyParser::ADD);
        setState(37);
        term(0);
        break;
      }

      case QDirtyParser::T__6:
      case QDirtyParser::ID:
      case QDirtyParser::NUMBER: {
        setState(38);
        term(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(49);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(47);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(41);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(42);
          match(QDirtyParser::ADD);
          setState(43);
          term(0);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(44);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(45);
          match(QDirtyParser::SUB);
          setState(46);
          term(0);
          break;
        }

        default:
          break;
        } 
      }
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

QDirtyParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QDirtyParser::FactorContext* QDirtyParser::TermContext::factor() {
  return getRuleContext<QDirtyParser::FactorContext>(0);
}

QDirtyParser::TermContext* QDirtyParser::TermContext::term() {
  return getRuleContext<QDirtyParser::TermContext>(0);
}

tree::TerminalNode* QDirtyParser::TermContext::MUL() {
  return getToken(QDirtyParser::MUL, 0);
}


size_t QDirtyParser::TermContext::getRuleIndex() const {
  return QDirtyParser::RuleTerm;
}

void QDirtyParser::TermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTerm(this);
}

void QDirtyParser::TermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTerm(this);
}


std::any QDirtyParser::TermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<QDirtyVisitor*>(visitor))
    return parserVisitor->visitTerm(this);
  else
    return visitor->visitChildren(this);
}


QDirtyParser::TermContext* QDirtyParser::term() {
   return term(0);
}

QDirtyParser::TermContext* QDirtyParser::term(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  QDirtyParser::TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, parentState);
  QDirtyParser::TermContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, QDirtyParser::RuleTerm, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(53);
    factor();
    _ctx->stop = _input->LT(-1);
    setState(60);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<TermContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleTerm);
        setState(55);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(56);
        match(QDirtyParser::MUL);
        setState(57);
        factor(); 
      }
      setState(62);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FactorContext ------------------------------------------------------------------

QDirtyParser::FactorContext::FactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QDirtyParser::FactorContext::NUMBER() {
  return getToken(QDirtyParser::NUMBER, 0);
}

tree::TerminalNode* QDirtyParser::FactorContext::ID() {
  return getToken(QDirtyParser::ID, 0);
}

QDirtyParser::ExprContext* QDirtyParser::FactorContext::expr() {
  return getRuleContext<QDirtyParser::ExprContext>(0);
}


size_t QDirtyParser::FactorContext::getRuleIndex() const {
  return QDirtyParser::RuleFactor;
}

void QDirtyParser::FactorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFactor(this);
}

void QDirtyParser::FactorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QDirtyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFactor(this);
}


std::any QDirtyParser::FactorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<QDirtyVisitor*>(visitor))
    return parserVisitor->visitFactor(this);
  else
    return visitor->visitChildren(this);
}

QDirtyParser::FactorContext* QDirtyParser::factor() {
  FactorContext *_localctx = _tracker.createInstance<FactorContext>(_ctx, getState());
  enterRule(_localctx, 8, QDirtyParser::RuleFactor);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QDirtyParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(63);
        match(QDirtyParser::NUMBER);
        break;
      }

      case QDirtyParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(64);
        match(QDirtyParser::ID);
        break;
      }

      case QDirtyParser::T__6: {
        enterOuterAlt(_localctx, 3);
        setState(65);
        match(QDirtyParser::T__6);
        setState(66);
        expr(0);
        setState(67);
        match(QDirtyParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

bool QDirtyParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 2: return exprSempred(antlrcpp::downCast<ExprContext *>(context), predicateIndex);
    case 3: return termSempred(antlrcpp::downCast<TermContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool QDirtyParser::exprSempred(ExprContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 5);
    case 1: return precpred(_ctx, 4);

  default:
    break;
  }
  return true;
}

bool QDirtyParser::termSempred(TermContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 2: return precpred(_ctx, 2);

  default:
    break;
  }
  return true;
}

void QDirtyParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  qdirtyParserInitialize();
#else
  ::antlr4::internal::call_once(qdirtyParserOnceFlag, qdirtyParserInitialize);
#endif
}
